--- a/Kun.uz/src/main/resources/application.properties
+++ b/Kun.uz/src/main/resources/application.properties
@@ -7,5 +7,28 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+# ===============================
+#       EMAIL
+# ===============================
+spring.mail.host=smtp.mail.ru
+spring.mail.port=465
+spring.mail.username=abdinabiyev2001@mail.ru
+spring.mail.password=DsyERewP75Z7fa2QPdtk
+spring.mail.protocol=smtps
 
-#server.port=8080
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+spring.mail.properties.mail.smtp.starttls.enable=true
+# ===============================
+#       Host
+# ===============================
+server.port=8080
+server.host=http://localhost:${server.port}
+# ===============================
+#       ATTACH
+# ===============================
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
